--- a/lib/sqs_web/application/views/error.erb
+++ b/lib/sqs_web/application/views/error.erb
@@ -1,3 +1,3 @@
 <h1>Error</h1>
-<p><%=h @error_class %>: <%= @error_message %></p>
-<p><%= @error_backtrace %></p>
+<p><%=h @error.error_class %>: <%= @error.error_message %></p>
+<p><%= @error.error_backtrace %></p>
