--- a/lib/sqs_web/application/views/dlq_console.erb
+++ b/lib/sqs_web/application/views/dlq_console.erb
@@ -6,10 +6,13 @@
 <p class="sub">
   <%= "Showing #{@messages.count} visible messages." %>
 </p>
-<form action="<%= u("bulk_remove") %>" method="post"><%= csrf_token_tag %><input type="submit" value="Bulk Remove" />
-<ul class="job">
-  <% @messages.each do |message| %>
-    <%= partial :message, {:message => message[:message], :queue => message[:queue]} %>
-  <% end %>
-</ul>
+<form method="post">
+  <%= csrf_token_tag %>
+  <input type="submit" value="Bulk Remove" formaction="<%= u("bulk_remove") %>"/>
+  <input type="submit" value="Bulk Move to Source Queue" formaction="<%= u("bulk_requeue") %>"/>
+  <ul class="job">
+    <% @messages.each do |message| %>
+      <%= partial :message, {:message => message[:message], :queue => message[:queue]} %>
+    <% end %>
+  </ul>
 </form>
